--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt=""></a> <br>
+            <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt=""></a> <br>
 
-            <a href="#" target="tela"> <img src="imagens/logo-youtube.jpg" alt=""></a><br>
+            <a href="youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt=""></a><br>
 
-            <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="github.html" target="tela"> <img src="imagens/logo-github.jpg" alt=""></a><br>
 
             <a href="#" target="tela"> <img src="imagens/logo-instagram.jpg" alt=""></a> <br>
 
