--- a/projeto/home.html
+++ b/projeto/home.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <style>
         * {
             margin: 0px;
             padding: 0px;
         }
 
-        body{
+        ::-webkit-scrollbar {
+            margin: 0px;
+            padding: 0px;
+        }
+
+        body {
             width: 100vw;
             height: 100vh;
             background: black url('imagens/tela-home.jpg') no-repeat top center;
@@ -19,6 +24,6 @@
     </style>
 </head>
 <body>
-    
+
 </body>
 </html>
