--- a/projeto/instagram.html
+++ b/projeto/instagram.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtbe</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="style/social.css">
-      
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="Youtube">
-    <a href="https://www.youtube.com/@CursoemVideo/playlists" target="_blank">ACESSE</a>
+    <img src="imagens/tela-instagram.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/gustavoguanabara" target="_blank">ACESSE</a>
 </body>
 </html>
